gke-objects/keycloack/keycloack-gateway.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloack-gateway
  namespace: keycloack
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - keycloack.sieczak.cloud
        - keycloack.keycloack.svc.cluster.local
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - keycloack.sieczak.cloud
        - keycloack.keycloack.svc.cluster.local
      tls:
        mode: SIMPLE
        credentialName: keycloack-sieczak-cloud-tls
